[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Spinner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/EnemySpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemy1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Home.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Slots.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Spinner" parent="." instance=ExtResource( 1 )]
position = Vector2( 491.798, 272.984 )
rotation = 4297.67

[node name="EnemySpawner" parent="." instance=ExtResource( 2 )]
position = Vector2( 658.791, 189.617 )
enemy_resource = ExtResource( 3 )
target_node = NodePath("../Spinner")

[node name="EnemySpawner2" parent="." instance=ExtResource( 2 )]
position = Vector2( 742.139, 97.413 )
enemy_resource = ExtResource( 3 )
target_node = NodePath("../Spinner")

[node name="EnemySpawner3" parent="." instance=ExtResource( 2 )]
position = Vector2( 810.171, 30.8327 )
enemy_resource = ExtResource( 3 )
target_node = NodePath("../Spinner")

[node name="DroppingsArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DroppingsArea"]

[node name="Home" parent="." instance=ExtResource( 5 )]
position = Vector2( 490.092, 269.336 )

[node name="Slots" parent="." instance=ExtResource( 6 )]
position = Vector2( 438.653, 488.663 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.427451, 0.109804, 0.807843, 0.356863 )
[connection signal="body_entered" from="DroppingsArea" to="." method="_on_DroppingsArea_body_entered"]
[connection signal="slot1_update" from="Slots" to="." method="_on_Slots_slot1_update"]
[connection signal="slot2_update" from="Slots" to="." method="_on_Slots_slot2_update"]
[connection signal="slot3_update" from="Slots" to="." method="_on_Slots_slot3_update"]
